--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
             <div class="square"></div>
         </div>
 
-        <script type="text/javascript" src="ColorGame.js"></script>
+        <script type="text/javascript" src="ColorGameScript.js"></script>
     </body>
 </html>
